@@ -1252,28 +1252,25 @@ const char sh_optprint[] =
 ;
 
 const char sh_optprintf[] =
-"[-1c?\n@(#)$Id: printf (ksh 93u+m) 2023-03-23 $\n]"
+"[-1c?\n@(#)$Id: printf (ksh 93u+m) 2024-02-11 $\n]"
 "[--catalog?" SH_DICT "]"
 "[+NAME?printf - write formatted output]"
 "[+DESCRIPTION?\bprintf\b writes each \astring\a operand to "
 	"standard output using \aformat\a to control the output format.]"  
-"[+?The \aformat\a operands supports the full range of ANSI C formatting "
+#if SHOPT_PRINTF_LEGACY
+"[+?For backward compatibility with this system's external \bprintf\b(1) "
+	"command, this built-in version allows the \aformat\a operand to "
+	"start with a \b-\b without a prior \b--\b options terminator "
+	"argument, provided no \aoptions\a are given. "
+	"This is not portable and should be avoided in new scripts.]"
+#else
+"[+?Note that the \aformat\a operand cannot start with a \b-\b unless it is "
+	"preceded by a \b--\b options terminator argument.]"
+#endif
+"[+?The \aformat\a operand supports the full range of ANSI C formatting "
 	"specifiers plus the following additional specifiers:]{"
 	"[+%b?Each character in the \astring\a operand is processed "
-		"specially as follows:]{"
-			"[+\\a?Alert character.]"
-			"[+\\b?Backspace character.]"
-			"[+\\c?Terminate output without appending newline. "
-			    "The remaining \astring\a operands are ignored.]"
-			"[+\\f?Formfeed character.]"
-			"[+\\n?Newline character.]"
-			"[+\\t?Tab character.]"
-			"[+\\v?Vertical tab character.]"
-			"[+\\\\?Backslash character.]"
-			"[+\\E?Escape character (ASCII octal 033).]"
-			"[+\\0\ax\a?The 8-bit character whose ASCII code is "
-				"the 1-, 2-, or 3-digit octal number \ax\a.]"
-		"}"
+		"for \b\\\b codes as in \bprint\b(1).]"
 	"[+%q?Output \astring\a quoted in a manner that it can be read in "
 		"by the shell to get back the same string. However, empty "
 		"strings resulting from missing \astring\a operands will "
@@ -1415,8 +1412,8 @@ const char sh_optprintf[] =
 	"specifiers will be treated as if empty strings were supplied, "
 	"numeric conversions will be treated as if 0 were supplied, and "
 	"time conversions will be treated as if \bnow\b were supplied.]"
-"[+?\bprintf\b is equivalent to \bprint -f\b which allows additional "
-	"options to be specified.]"
+"[+?Except for the \b-v\b option, \bprintf\b is equivalent to \bprint -f\b "
+	"which allows additional options to be specified.]"
 "[v]:[name?Put the output in the variable \aname\a instead of writing to "
 	"standard output. \aname\a may include an array subscript (note that "
 	"the square brackets should be quoted to avoid pathname expansion).]"
